[package]
name = "prpc-build"
version = "0.2.0"
edition = "2018"

description = "Build prpc from protobuf definitions"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/prpc"

[dependencies]
protoc = { version = "0.9", package = "prost-build" }
prost-build = { version = "0.12.4" }
syn = "2.0.59"
quote = "1.0"
template-quote = "0.3"
proc-macro2 = "1.0"
prost-types = "0.12.4"
prost = "0.12.4"
itertools = "0.12.1"
either = "1.6.1"
multimap = "0.10.0"
heck = "0.5.0"
log = "0.4.14"
