[package]
name = "prpc-build"
version = "0.3.2"
edition = "2018"

description = "Build prpc from protobuf definitions"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/prpc"

[dependencies]
protoc = { version = "0.9", package = "prost-build" }
prost-build = { version = "0.13.3" }
syn = "2.0.59"
quote = "1.0"
template-quote = "0.4.2"
proc-macro2 = "1.0"
prost-types = "0.13.3"
prost = "0.13.3"
itertools = "0.13.0"
either = "1.6.1"
multimap = "0.10.0"
heck = "0.5.0"
log = "0.4.14"
