[package]
name = "prpc"
version = "0.2.0"
edition = "2018"

description = "Phala's RPC library"
license = "Apache-2.0"
homepage = "https://github.com/Phala-Network/prpc"

[dependencies]
async-trait = "0.1.57"
derive_more = "0.99.16"
prost = { version = "0.12.4", default-features = false, features = ["prost-derive"] }
anyhow = { version = "1", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false }
serde_json = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
hex = "0.4.3"
hex_fmt = "0.3.0"
prpc-serde-bytes = { version = "0.1.0", path = "../prpc-serde-bytes" }

[features]
default = ["std"]
std = ["serde_json/std", "serde/std"]
